/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Energinet.DataHub.Edi.Requests";

message AggregatedTimeSeriesRequest {
  TimeSeriesType time_series_type = 1;
  Period period = 2;
  oneof aggregation_level {
    AggregationPerGridArea aggregation_per_gridarea = 3;
    AggregationPerEnergySupplierPerGridArea aggregation_per_energysupplier_per_gridarea = 4;
    AggregationPerBalanceResponsiblePartyPerGridArea aggregation_per_balanceresponsibleparty_per_gridarea = 5;
    AggregationPerEnergySupplierPerBalanceResponsiblePartyPerGridArea aggregation_per_energysupplier_per_balanceresponsibleparty_per_gridarea = 6;
  }
}

message Period {
  google.protobuf.Timestamp start_of_period = 1;
  google.protobuf.Timestamp end_of_period = 2;
}

message AggregationPerGridArea {
  /*
   * The grid area code specifying the grid area for which the time series is aggregated.
   * The grid area code is a 3 character string consisting solely of digits.
   * Examples:
   *   543
   *   020
   *
   * The grid responsible id is the sender id of the grid responsible.
   */
  string grid_area_code = 1;
  string grid_responsible_id = 2;
}

message AggregationPerEnergySupplierPerGridArea {
  /*
   * The grid area code specifying the grid area for which the time series is aggregated.
   * The grid area code is a 3 character string consisting solely of digits.
   * Examples:
   *   543
   *   020
   */
  string grid_area_code = 1;

  string energy_supplier_id = 3;
}

message AggregationPerBalanceResponsiblePartyPerGridArea {
  /*
   * The grid area code specifying the grid area for which the time series is aggregated.
   * The grid area code is a 3 character string consisting solely of digits.
   * Examples:
   *   543
   *   020
   */
  string grid_area_code = 1;

  string balance_responsible_party_id = 2;
}

message AggregationPerEnergySupplierPerBalanceResponsiblePartyPerGridArea {
  /*
   * The grid area code specifying the grid area for which the time series is aggregated.
   * The grid area code is a 3 character string consisting solely of digits.
   * Examples:
   *   543
   *   020
   */
  string grid_area_code = 1;

  string balance_responsible_party_id = 2;

  string energy_supplier_id = 3;
}

enum TimeSeriesType {
  /*
   * Unspecified is unused but according to best practice.
   * Read more at https://protobuf.dev/programming-guides/style/#enums.
   */
  TIME_SERIES_TYPE_UNSPECIFIED = 0;
  TIME_SERIES_TYPE_PRODUCTION = 1;
  TIME_SERIES_TYPE_NON_PROFILED_CONSUMPTION = 2;
  TIME_SERIES_TYPE_FLEX_CONSUMPTION = 3;
  TIME_SERIES_TYPE_NET_EXCHANGE_PER_GA = 4;
  TIME_SERIES_TYPE_NET_EXCHANGE_PER_NEIGHBORING_GA = 5;
  TIME_SERIES_TYPE_TOTAL_CONSUMPTION = 6;
}
